# cockroach

./: CLAUDE.md  gogo.sh  inspect-demo.sh  last-hybrid-ttl-job.sql  last-ttl-partition-maintenance-job.sql  partition-ttl-1-week-static.sql  partition-ttl-schedule.sql  row-ttl-1-week-static.sql  row-ttl-schedule.sql
docs/: partition_ttl_design.md
pkg/: BUILD.bazel
pkg/backup/: BUILD.bazel  alter_backup_schedule_test.go  backup_test.go  full_cluster_backup_restore_test.go
pkg/base/: license.go
pkg/bench/: foreachdb.go
pkg/bench/rttanalysis/testdata/: benchmark_expectations
pkg/blobs/: stream.go
pkg/ccl/: BUILD.bazel  ccl_init.go
pkg/ccl/changefeedccl/: BUILD.bazel  changefeed_test.go  helpers_test.go
pkg/ccl/changefeedccl/cdcevent/: event_test.go
pkg/ccl/changefeedccl/cdctest/: row.go
pkg/ccl/importerccl/: BUILD.bazel  ccl_test.go
pkg/ccl/multiregionccl/: BUILD.bazel  multiregion_system_table_test.go  multiregion_test.go  show_test.go
pkg/ccl/schemachangerccl/: backup_base_generated_test.go  ccl_generated_test.go
pkg/ccl/schemachangerccl/sctestbackupccl/: backup_multiregion_generated_test.go
pkg/ccl/spanconfigccl/spanconfiglimiterccl/: BUILD.bazel  datadriven_test.go
pkg/ccl/spanconfigccl/spanconfigreconcilerccl/: BUILD.bazel  datadriven_test.go
pkg/ccl/spanconfigccl/spanconfigsplitterccl/: BUILD.bazel  datadriven_test.go
pkg/ccl/spanconfigccl/spanconfigsqltranslatorccl/: BUILD.bazel  datadriven_test.go
pkg/ccl/storageccl/: external_sst_reader.go  external_sst_reader_test.go
pkg/ccl/testccl/sqlccl/: explain_test.go
pkg/ccl/utilccl/: BUILD.bazel  license_check.go  license_check_test.go  license_test.go
pkg/ccl/utilccl/licenseccl/: BUILD.bazel  license.go  license.proto
pkg/cmd/roachtest/: test_runner.go
pkg/cmd/roachtest/roachtestutil/: BUILD.bazel  validation_check.go
pkg/cmd/roachtest/tests/: BUILD.bazel  admission_control.go  admission_control_index_backfill.go  admission_control_inspect.go  alterpk.go  hibernate.go  inspect_overload.go  inspect_throughput.go  registry.go  (+3 more)
pkg/jobs/jobspb/: jobs.proto  wrap.go
pkg/kv/: txn.go
pkg/kv/bulk/: cpu_pacer.go
pkg/roachprod/opentelemetry/: cockroachdb_metrics.go
pkg/rpc/: auth_test.go
pkg/security/username/: username.go
pkg/server/: BUILD.bazel  config.go  server.go  server_controller_new_server.go  server_http.go  server_sql.go  testserver.go
pkg/server/diagnostics/: reporter.go
pkg/server/license/: BUILD.bazel  cclbridge.go  enforcer.go  enforcer_test.go  opts.go
pkg/sql/: BUILD.bazel  alter_column_type.go  alter_column_type_test.go  alter_database.go  alter_table.go  authorization.go  backfill.go  bulk_bridge.go  bulk_merge_bridge.go  check.go  conn_executor.go  conn_executor_exec.go  control_schedules.go  crdb_internal.go  create_schema.go  create_table.go  distsql_plan_backfill.go  distsql_plan_changefeed.go  distsql_running.go  drop_cascade.go  drop_index.go  drop_role.go  drop_table.go  drop_view.go  exec_util.go  explain_plan.go  index_backfiller.go  indexbackfiller_test.go  insert.go  inspect_job.go  opaque.go  opt_catalog.go  plan_names.go  plan_opt.go  region_util.go  region_util_test.go  rename_table.go  resolver.go  row_level_security.go  schema_changer_test.go  (+8 more)
pkg/sql/backfill/: BUILD.bazel  backfill.go  distributed_merge_cleanup.go  distributed_merge_mode.go  distributed_merge_mode_test.go  mvcc_index_merger.go  mvcc_index_merger_test.go
pkg/sql/bulkingest/: BUILD.bazel  ingest.go  ingest_file_processor.go  split.go
pkg/sql/bulkmerge/: BUILD.bazel  instance_availability.go  instance_availability_test.go  instance_unavailability.proto  main_test.go  merge.go  merge_coordinator.go  merge_coordinator_test.go  merge_loopback.go  merge_planning.go  merge_processor.go  merge_processor_test.go  merge_test.go  settings.go  sst_overlap.go  sst_overlap_test.go  sst_source.go  sst_source_test.go  suffixing_iterator.go  suffixing_iterator_test.go
pkg/sql/bulksst/: combine_file_info.go  combine_file_info_test.go  sst_writer.go
pkg/sql/bulkutil/: bulk_job_cleaner.go  bulk_job_cleaner_test.go
pkg/sql/catalog/: descriptor.go  descriptor_id_set.go  table_elements.go
pkg/sql/colexec/: insert.go
pkg/sql/execinfrapb/: BUILD.bazel  flow_diagram.go  processors.proto  processors_bulk_io.proto  processors_ttl.proto
pkg/sql/faketreeeval/: evalctx.go
pkg/sql/importer/: import_job.go  import_processor_planning.go
pkg/sql/inspect/: BUILD.bazel  index_consistency_check.go  index_consistency_check_test.go  inspect_job.go  inspect_metrics_test.go  inspect_plan.go  inspect_processor.go  inspect_processor_test.go  inx_consistency_check.go  issue.go  runner.go  runner_test.go  span_source.go  testing_check.go
pkg/sql/opt/: BUILD.bazel  metadata.go  row_level_security.go
pkg/sql/parser/: sql.y
pkg/sql/partition/: BUILD.bazel  alter_primary_key_test.go  drop_test.go  partition.go  partition_test.go  zone_test.go
pkg/sql/regions/: region_util.go
pkg/sql/roleoption/: BUILD.bazel  role_option.go
pkg/sql/row/: errors.go
pkg/sql/rowexec/: BUILD.bazel  indexbackfiller.go  indexbackfiller_test.go  processors.go
pkg/sql/schemachange/: BUILD.bazel  alter_column_type.go  alter_column_type_test.go
pkg/sql/schemachanger/: dml_injection_test.go  sctest_generated_test.go
pkg/sql/sessionmutator/: BUILD.bazel  mutator.go
pkg/sql/spanutils/: query_bounds.go
pkg/sql/sqlerrors/: errors.go
pkg/sql/sqltelemetry/: ttl.go
pkg/sql/sqltestutils/: sql_test_utils.go
pkg/sql/syntheticprivilegecache/: cache.go
pkg/sql/tests/: sysbench_test.go
pkg/sql/ttl/ttlpartition/: BUILD.bazel  main_test.go  partition_maintenance_job.go  partition_maintenance_job_test.go  partition_ttl_schedule.go
pkg/testutils/lint/: lint_test.go
pkg/util/admission/: elastic_cpu_grant_coordinator.go  elastic_cpu_work_queue.go
pkg/util/taskset/: BUILD.bazel  task_set.go  task_set_test.go  task_span.go  task_span_test.go
pkg/workload/schemachange/: operation_generator.go
scripts/: TTL-DEMO-README.md  gen-movr-data.sh  run-ttl-demo-interactive.sh  run-ttl-demo.sh  setup-ttl-cluster.sh
(+297 files in other folders)
