load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "importerccl_test",
    srcs = [
        "ccl_test.go",
        "main_test.go",
    ],
    data = [
        "//c-deps:libgeos",
        "//pkg/sql/importer:testdata",
    ],
    exec_properties = select({
        "//build/toolchains:is_heavy": {"test.Pool": "large"},
        "//conditions:default": {"test.Pool": "default"},
    }),
    deps = [
        "//pkg/base",
        "//pkg/build/bazel",
        "//pkg/ccl",
        "//pkg/ccl/kvccl",
        "//pkg/ccl/multiregionccl",
        "//pkg/ccl/multiregionccl/multiregionccltestutils",
        "//pkg/cloud/impl:cloudimpl",
        "//pkg/jobs",
        "//pkg/jobs/jobspb",
        "//pkg/roachpb",
        "//pkg/security/securityassets",
        "//pkg/security/securitytest",
        "//pkg/security/username",
        "//pkg/server",
        "//pkg/sql",
        "//pkg/sql/importer",
        "//pkg/sql/partition",
        "//pkg/testutils",
        "//pkg/testutils/datapathutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/skip",
        "//pkg/testutils/sqlutils",
        "//pkg/testutils/testcluster",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/randutil",
        "@com_github_lib_pq//:pq",
        "@com_github_stretchr_testify//require",
    ],
)
