load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# Copyright 2025 The Cockroach Authors.
#
# Use of this software is governed by the CockroachDB Software License
# included in the /LICENSE file.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bulkmerge",
    srcs = [
        "instance_availability.go",
        "merge.go",
        "merge_coordinator.go",
        "merge_loopback.go",
        "merge_planning.go",
        "merge_processor.go",
        "merge_writer.go",
        "settings.go",
        "testing_knobs.go",
    ],
    embed = [":bulkmerge_go_proto"],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/bulkmerge",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/base",
        "//pkg/ccl/storageccl",
        "//pkg/cloud/cloudpb",
        "//pkg/cloud/nodelocal",
        "//pkg/jobs",
        "//pkg/jobs/jobspb",
        "//pkg/keys",
        "//pkg/kv/bulk",
        "//pkg/roachpb",
        "//pkg/settings",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/sql/bulksst",
        "//pkg/sql/bulkutil",
        "//pkg/sql/execinfra",
        "//pkg/sql/execinfrapb",
        "//pkg/sql/isql",
        "//pkg/sql/physicalplan",
        "//pkg/sql/rowenc",
        "//pkg/sql/rowexec",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlinstance",
        "//pkg/sql/types",
        "//pkg/storage",
        "//pkg/util/hlc",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/syncutil",
        "//pkg/util/taskset",
        "//pkg/util/timeutil",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_cockroachdb_pebble//objstorage",
    ],
)

go_test(
    name = "bulkmerge_test",
    srcs = [
        "instance_availability_test.go",
        "main_test.go",
        "merge_test.go",
    ],
    embed = [":bulkmerge"],
    deps = [
        "//pkg/base",
        "//pkg/ccl/storageccl",
        "//pkg/cloud",
        "//pkg/cloud/externalconn/providers",
        "//pkg/jobs",
        "//pkg/jobs/jobspb",
        "//pkg/keys",
        "//pkg/kv/kvclient/kvtenant",
        "//pkg/kv/kvpb",
        "//pkg/roachpb",
        "//pkg/security/securityassets",
        "//pkg/security/securitytest",
        "//pkg/security/username",
        "//pkg/server",
        "//pkg/sql",
        "//pkg/sql/bulksst",
        "//pkg/sql/bulkutil",
        "//pkg/sql/execinfra",
        "//pkg/sql/execinfrapb",
        "//pkg/sql/isql",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlinstance",
        "//pkg/sql/sqlliveness",
        "//pkg/storage",
        "//pkg/testutils",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/skip",
        "//pkg/testutils/storageutils",
        "//pkg/testutils/testcluster",
        "//pkg/util/encoding",
        "//pkg/util/hlc",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/randutil",
        "//pkg/util/taskset",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_stretchr_testify//require",
    ],
)

proto_library(
    name = "bulkmerge_proto",
    srcs = ["instance_unavailability.proto"],
    strip_import_prefix = "/pkg",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gogo_protobuf//gogoproto:gogo_proto"],
)

go_proto_library(
    name = "bulkmerge_go_proto",
    compilers = ["//pkg/cmd/protoc-gen-gogoroach:protoc-gen-gogoroach_compiler"],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/bulkmerge",
    proto = ":bulkmerge_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gogo_protobuf//gogoproto"],
)
