load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ttlpartition",
    srcs = ["partition_maintenance_job.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/ttl/ttlpartition",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/jobs",
        "//pkg/jobs/jobspb",
        "//pkg/keys",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/sql/catalog",
        "//pkg/sql/catalog/catpb",
        "//pkg/sql/catalog/descs",
        "//pkg/sql/rowenc",
        "//pkg/sql/sem/tree",
        "//pkg/util/duration",
        "//pkg/util/log",
        "//pkg/util/timeutil",
        "@com_github_cockroachdb_errors//:errors",
    ],
)

go_test(
    name = "ttlpartition_test",
    srcs = ["partition_maintenance_job_test.go"],
    embed = [":ttlpartition"],
    deps = [
        "//pkg/sql/catalog/catpb",
        "//pkg/sql/sem/tree",
        "//pkg/util/duration",
        "@com_github_stretchr_testify//require",
    ],
)
